crates/cherry-pit-core/tests/compile_fail/domain_event_requires_clone.stderr
error[E0277]: the trait bound `NotCloneable: pardosa_encoding::traits::Encode` is not satisfied
  --> tests/compile_fail/domain_event_requires_clone.rs:15:22
   |
15 | impl DomainEvent for NotCloneable {
   |                      ^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `pardosa_encoding::traits::Encode` is not implemented for `NotCloneable`
  --> tests/compile_fail/domain_event_requires_clone.rs:11:1
   |
11 | struct NotCloneable {
   | ^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `pardosa_encoding::traits::Encode`:
             &[u8]
             &str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
           and $N others
note: required by a bound in `DomainEvent`
  --> src/event.rs
   |
   | pub trait DomainEvent:
   |           ----------- required by a bound in this trait
   |     Serialize + DeserializeOwned + Clone + Send + Sync + pardosa_encoding::Encode + 'static
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DomainEvent`
   = note: `DomainEvent` is a "sealed trait", because to implement it you also need to implement `pardosa_encoding::traits::Encode`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             cherry_pit_core::AggregateId
             cherry_pit_core::EventEnvelope<E>
             pardosa_encoding::error::EventError
             u8
             i8
             u16
             u32
             u64
           and $N others

error[E0277]: the trait bound `NotCloneable: Clone` is not satisfied
  --> tests/compile_fail/domain_event_requires_clone.rs:15:22
   |
15 | impl DomainEvent for NotCloneable {
   |                      ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NotCloneable`
   |
note: required by a bound in `DomainEvent`
  --> src/event.rs
   |
   | pub trait DomainEvent:
   |           ----------- required by a bound in this trait
   |     Serialize + DeserializeOwned + Clone + Send + Sync + pardosa_encoding::Encode + 'static
   |                                    ^^^^^ required by this bound in `DomainEvent`
help: consider annotating `NotCloneable` with `#[derive(Clone)]`
   |
11 + #[derive(Clone)]
12 | struct NotCloneable {
   |
